# ChangeLog for app-emacs/mv_emacs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mv_emacs-1.1 (29 Jun 2012)

  29 Jun 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fixes compatibility issues with emacs-24.

*mv_emacs-1.0 (01 Mar 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass

  01 Mar 2012; Martin Väth <martin@mvath.de>
  New ebuild from scratch.