@@ -1,1 +1,1 @@
-DIST mv_emacs-1.1.tar.gz 17887 RMD160 580d1cd9137f166914284cb1546a88f38b0e73fc SHA1 229928ea33ca7ef029c35dc82a686fce2f38bbd0 SHA256 d722279743c77ee2e6ded5ac9e7f7e2e4d173a41a469559b9daf31828e1f2617
+DIST mv_emacs-1.1.tar.gz 17887 SHA256 d722279743c77ee2e6ded5ac9e7f7e2e4d173a41a469559b9daf31828e1f2617 SHA512 22e97ce8bf40cea7e8946facfb607185c64d06e318ff3dd8fe49dd2c73e65bc315880e8b34edb0ae731d9348ae16d66781ec5cd58fa3f835899e3d888eec4f1c WHIRLPOOL c0e80b1e6f8247e6a4889f49aa0274c4604c89354cfc336289b1fb80085e947edafc63693a6b68f3907294a5863b207a6854ee0b8f74856aa62e62da34160c48
