@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mv_emacs-1.1-r1 (24 Jul 2012)
+
+  24 Jul 2012; Martin Väth <martin@mvath.de>
+  Add site file
+
 *mv_emacs-1.1 (29 Jun 2012)
 
   29 Jun 2012; Martin Väth <martin@mvath.de>
